# video_analyzer

./: .jobs.db  API_QUICKSTART.md  Dockerfile  README.md  api_client.py  constrained_prompts.json  convert.py  docker-compose.yml  pyproject.toml  result.json  result2.json  test_quality_scoring.py
Docs/: analysis_result.schema.json  api.md  prompts.md
openscenesense_ollama/: analyzer.py  models.py  transcriber.py  video_utils.py
tests/: test_analyzer.py  test_analyzer_retry.py  test_api_server.py  test_cli.py  test_exceptions.py  test_frame_selectors.py  test_job_manager.py  test_models.py  test_structured_output.py  test_transcriber_utils.py  test_video_utils.py
video_analyzer/: __init__.py  analyzer.py  api_server.py  cli.py  frame_selectors.py  job_manager.py  models.py  transcriber.py  video_utils.py
